solve overflow problem

--- a/src/custom.css
+++ b/src/custom.css
@@ -22,7 +22,7 @@
 body{
     background-color: var(--white);
     direction: rtl;
-    
+    max-width: 100vw;
     overflow-x: hidden;
 }
 
